@@ -101,8 +101,8 @@ Formatting of the inserted code has to be taken care of by LaTeX.  For instance,
 
 
 \clearpage
-\subsection{Evaluating, embedding and echoing code (\code{<\%=evalWithEcho(\{code chunk\})\%>})}
-The \code{evalWithEcho()} function allows us to evaluate, embed and echo the output of a code chunk\footnote{Since \code{evalWithEcho(\{code chunk\})} is a function call, the \code{\{code chunk\}} must be a complete R expression.}.  For example:
+\subsection{Echoing evaluated code (\code{<\%=evalWithEcho(\{code chunk\})\%>})}
+The \code{evalWithEcho()} function allows us to evaluate, embed and echo the output of a code chunk\footnote{\code{\{code chunk\}} must be a complete and valid R expression, because \code{evalWithEcho()} is a function call.}.  For example:
 \begin{rspVerbatim}
 <\%=evalWithEcho(\{
 n <- 3;   # Comments are not displayed
@@ -123,50 +123,29 @@ type
 })%>
 \end{verbatim}
 
-Note that code is parsed and formatted according to R standards, meaning that indentation, spacing and so on are \emph{not} preserved.  Also, comments, semicolons and other constructs are dropped from the code.
-%%Shortcut:
-%%
-%%\begin{rspVerbatim}
-%%<\%::
-%%n <- 50
-%%x <- seq(1, n)
-%%a.true <- 3
-%%b.true <- 1.5
-%%y.true <- a.true + b.true * x
-%%s.true <- 17.3
-%%y <- y.true + s.true * rnorm(n)
-%%out1 <- lm(y ~ x)
-%%summary(out1)
-%%%>
-%%\end{rspVerbatim}
-%%evaluates the code and insert the following into the LaTeX document:
-%%\begin{verbatim}
-%%<%::
-##n <- 50
-##x <- seq(1, n)
-##a.true <- 3
-##b.true <- 1.5
-##y.true <- a.true + b.true * x
-##s.true <- 17.3
-##y <- y.true + s.true * rnorm(n)
-##out1 <- lm(y ~ x)
-##summary(out1)
-##%>
-%%\end{verbatim}
+Note that code is parsed and formatted by the R parser, meaning that indentation, spacing and so on are \emph{not} preserved when echoing this way.  This is also why comments, semicolons and other code constructs are dropped from the code.
 
 
 \subsection{Inlining values of variables (\code{<\%=\{code\}\%>})}
 The RSP markup \code{<\%=\{code\}\%>} evaluates the code (without inserting it into the document) and inserts the character representation\footnote{The \emph{character representation} of an object \code{x} is what \code{as.character(x)} gives.} of the returned object.  For instance,
 \begin{rspVerbatim}
-There are <\%=n%> red <\%=type%>s
+There are <\%=n\%> red <\%=type\%>s
 \end{rspVerbatim}
 would produce the string 'There are <%=n%> red <%=type%>s'.
-
-
+If inlining multiple values, they are all pasted together without any separator.  For example:
+\begin{rspVerbatim}
+The letters of the alphabet are '<\%=LETTERS\%>'
+\end{rspVerbatim}
+produces 'The letters the alphabet are '<%=LETTERS%>'.
+To separate the elements with commas, use \code{<\%=paste(LETTERS, collapse=", ")\%>}.  Alternatively, use \code{<\%=hpaste(LETTERS)\%>} to output '<%=hpaste(LETTERS)%>'\footnote{The \code{hpaste()} function of \pkg{R.utils} provides "human-readable" pasting of vectors.}.
 
 \subsection{Comments (\code{<\%--\{anything\}--\%>})}
-The RSP markup \code{<\%--\{anything\}--\%>} will be treated as a comment that can contain \emph{anything} (but \code{--\%>}), which will not be translated and not part of the output, i.e. it will immediately be dropped.  RSP comments are useful for excluding large sections of an RSP document.  
-Note that RSP comments are \emph{greedy}, that is, anything between (and including) the \code{<\%--} and the \emph{first} the \code{--\%>} will be dropped, which means that they cannot be nested.
+The RSP markup \code{<\%--\{anything\}--\%>} will be treated as a comment that can contain \emph{anything} (but \code{--\%>}), which will not be translated and not part of the output, i.e. it will immediately be dropped.  RSP comments are useful for excluding large sections of an RSP document, but also for preventing newlines to be inserted.
+
+First, the RSP comments are \emph{greedy}, that is, anything between (and including) the \code{<\%--} and the \emph{first} following \code{--\%>} will be dropped, which means that they cannot be nested.
+Second, RSP comments are special in the sense that if the remainder of the line following the comment consists of only whitespace symbols, then they are also dropped, including the newline.  Thus, an \code{<\%----\%>} at the end of a line will prevent a newline from being inserted.
+
+For example,
 \begin{rspVerbatim}
 <\%-- This is an RSP comment that will be dropped --\%>
 You can write a paragraph and drop a large portion of it using 
@@ -175,8 +154,7 @@ There are <\%=n\%> red <\%=type\%>s
 <\%-- and this --\%> but they must not be nested --\%>, because then
 the output will be like this.
 \end{rspVerbatim}
-
-which produces:
+produces:
 \begin{verbatim}
 <%-- This is an RSP comment that will be dropped --%>
 You can write a paragraph and drop a large portion of it using 
@@ -192,11 +170,11 @@ the output will be like this.
 A useful feature of RSP is that it is possible to use RSP constructs that span multiple code and LaTeX blocks.  For instance, the following will iterate over a set of LaTeX and code blocks:
 \begin{rspVerbatim}
 The <\%=n <- length(letters)%> letters in the English alphabet are: 
-<\% for (i in 1:n) \{ %>
-  <\%=letters[i]%>/<\%=LETTERS[i]%><\%=if(i < n) ", "%>%
-<\% \} %>.
+<\% for (i in 1:n) \{ \%>
+  <\%=letters[i]\%>/<\%=LETTERS[i]\%><\%=if(i < n) ", "\%>
+<\% \} \%>.
 \end{rspVerbatim}
-which generates: 'The <%=n <- length(letters)%> letters in the English alphabet are: 
+which generates:\footnote{Of course, in this particular case, the above for-loop can be replaced by \code{paste(letters, LETTERS, sep="/", collapse=", ")}.}: 'The <%=n <- length(letters)%> letters in the English alphabet are: 
 <% for (i in 1:n) { %>
   <%=letters[i]%>/<%=LETTERS[i]%><%=if(i < n) ", "%>
 <% } %>.'
@@ -204,12 +182,12 @@ which generates: 'The <%=n <- length(letters)%> letters in the English alphabet 
 A more complex example is where one wish to generate a report on human genomic data across all of the 24 chromosomes and where the same type of analysis should be repeated for each chromosome.  With RSP markup, this can be achieved by an outer loop over chromosomes:
 \begin{rspVerbatim}
 <\% for (chromosome in 1:24) \{ %>
-{\bs}section\{Chromosome <\%=chromosome%>\}
+{\bs}section\{Chromosome <\%=chromosome\%>\}
 ...
 A mix of RSP and LaTeX blocks constituting 
 the analysis of the current chromosome.
 ...
-<\% \} # for (chromosome ...) %>
+<\% \} # for (chromosome ...) \%>
 \end{rspVerbatim}
 
 Note that there exist no corresponding markup in Sweave.  Instead, contrary to RSP, Sweave requires the each code chunk contains a complete R expression.  This means that, in terms of the above example, in Sweave it is not possible to begin a for loop in one code chunk and end it in a succeeding one.  This has to do with the fundamentally different way RSP and Sweave documents are processed.
@@ -272,7 +250,7 @@ With this setup, it is possible to create and embed a figure with the following 
 \begin{rspVerbatim}
 {\bs}includegraphics\{<\%=toPNG(name="MyFigure,yeah,cool", aspectRatio=0.6, \{
   curve(dnorm, from=-5, to=+5);
-\})%>\}
+\})\%>\}
 \end{rspVerbatim}
 After the RSP code has been processed, and the image file has been created, the above simply produces the following markup in the generated LaTeX document:
 \begin{verbatim}
@@ -289,44 +267,61 @@ After the RSP code has been processed, and the image file has been created, the 
 Sometimes the very similar paragraphs of text, tables, or figures are used throughout a document with only minor differences.  Instead of cut'n'pasting the same pieces of RSP and code to other places in the document, it is more robust and much easier to setup a template which is then reused in place.
 Because of the nature of RSP, setting up a template is as simple as wrapping the mixture of RSP and code blocks in a function definition.  For example, assume you wish to reuse the following RSP and R blocks multiple times:
 \begin{rspVerbatim}
-The sum of $x=<\%=paste(1:n, collapse=", ")%>$ is <\%=sum(1:n)%>.
+The sum of $x=<\%=hpaste(1:n, abbreviate="{\bs}{\bs}ldots")\%>$ is <\%=sum(1:n)\%>.
 \end{rspVerbatim}
 Then place it in a function definition:
 \begin{rspVerbatim}
-<\% myTemplate <- function(n, ...) \{ %>
-The sum of $x=<\%=paste(1:n, collapse=", ")%>$ is <\%=sum(1:n)%>.%
-<\% \} # myTemplate() %>
+<\% myTemplate <- function(n, ...) \{ \%>
+The sum of $x=<\%=hpaste(1:n, abbreviate="{\bs}{\bs}ldots")\%>$ is <\%=sum(1:n)\%>.<\%----\%>
+<\% \} # myTemplate() \%>
 \end{rspVerbatim}
 <% myTemplate <- function(n, ...) { %>
-The sum of $x=<%=paste(1:n, collapse=", ")%>$ is <%=sum(1:n)%>.%
+The sum of $x=<%=hpaste(1:n, abbreviate="\\ldots")%>$ is <%=sum(1:n)%>.<%----%>
 <% } # myTemplate() %>
-We use a trailing LaTeX comment (\code{\%}) in order to escape the newline that otherwise would be appended.  Also, note that there is no limitation in how many RSP and text blocks you can use.  After having defined the template, it can be reused any number of times by simply by calling it as a function:
+We use a trailing (empty) RSP comment (\code{<\%----\%>}) to escape the following newline.  Also, note that there is no limitation in how many RSP and text blocks you can use.  After having defined the template, it can be reused any number of times by simply by calling it as a function:
 \begin{rspVerbatim}
-<\% myTemplate(n=3) %>
+<\% myTemplate(n=3) \%>
 \end{rspVerbatim}
-which produces '<% myTemplate(n=3) %>'.  If one drop the trailing LaTeX comment (\code{\%}), LaTeX would insert a white space after the period and before the closing single-quote.
+which produces '<% myTemplate(n=3) %>'.  Without the trailing RSP comment, LaTeX would insert a whitespace after the period and before the closing single-quote.
 A template can also be used within for loops.  For example:
 \begin{rspVerbatim}
 {\bs}begin\{itemize\}
-<\% for (ii in 1:5) \{ %>
- {\bs}item <\% myTemplate(n=ii) %>
-<\% \} # for (ii ...) %>
+<\% for (ii in c(3,5,10,100)) \{ \%>
+ {\bs}item <\% myTemplate(n=ii) \%>
+<\% \} # for (ii ...) \%>
 {\bs}end\{itemize\}
 \end{rspVerbatim}
 produces:
 \begin{itemize}
-<% for (ii in 1:5) { %>
- \item <% myTemplate(ii) %>
+<% for (ii in c(3,5,10,100)) { %>
+ \item <%= myTemplate(ii) %>
 <% } # for (ii ...) %>
 \end{itemize}
 
 
+<%--
+\section{Summary of features in comparison to Sweave}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Session information
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{table}[htb]
+\begin{center}
+\begin{tabular}{lcc}
+Feature & RSP & Sweave \\
+\hline
+Non-contexted aware processing                 & yes & - \\
+Multiline comments                             & yes & - \\
+Interweaving incomplete code and text snippets & yes & - \\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+--%>
+
+<%-------------------------------------------------------------------
+  APPENDIX
+  -------------------------------------------------------------------%>
 \clearpage
-\section*{Session information}
+\section*{Appendix}
+\subsection*{Session information}
 <%=toLatex(sessionInfo())%>
 This report was automatically generated using \code{rsptex()} of the R.rsp package.  Total processing time (excluding RSP-to-R translation) was <%=sprintf("%.2f", Sys.time()-t0)%> seconds.
 
